--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -9,7 +9,7 @@
   "additional_permissions_required": {
     "message": "Additional Permissions Required"
   },
-  "ads": {
+  "ads___onboarding": {
     "message": "Ads"
   },
   "adult_advertising": {
@@ -67,6 +67,10 @@
   "comments": {
     "message": "評論",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
+  },
+  "consent_management": {
+    "message": "Consent Management",
+    "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
   },
   "continue": {
     "message": "Continue"
