--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -68,6 +68,10 @@
     "message": "Kommentare",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
+  "consent_management": {
+    "message": "Zustimmungsmanagement",
+    "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
+  },
   "continue": {
     "message": "Weiter"
   },
