--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -68,6 +68,10 @@
     "message": "Commentaires",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
+  "consent_management": {
+    "message": "Gestion du consentement",
+    "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
+  },
   "continue": {
     "message": "Continuer"
   },
