--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -68,6 +68,10 @@
     "message": "コメント",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
+  "consent_management": {
+    "message": "同意の管理",
+    "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
+  },
   "continue": {
     "message": "継続"
   },
