--- a/extension-manifest-v2/_locales/zh_CN/messages.json
+++ b/extension-manifest-v2/_locales/zh_CN/messages.json
@@ -634,6 +634,10 @@
   "confirm_password_colon": {
     "message": "确认密码："
   },
+  "consent_management": {
+    "message": "Consent Management",
+    "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
+  },
   "continue": {
     "message": "继续"
   },
