--- a/extension-manifest-v2/_locales/es/messages.json
+++ b/extension-manifest-v2/_locales/es/messages.json
@@ -635,7 +635,7 @@
     "message": "Confirmar contraseña:"
   },
   "consent_management": {
-    "message": "Consent Management",
+    "message": "Gestión del consentimiento",
     "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
   },
   "continue": {
@@ -1324,21 +1324,6 @@
   },
   "settings_account_name": {
     "message": "Nombre"
-  },
-  "settings_adblocker": {
-    "message": "Listas de bloqueo de anuncios"
-  },
-  "settings_adblocker_list_1": {
-    "message": "Solo anuncios"
-  },
-  "settings_adblocker_list_2": {
-    "message": "Anuncios + Rastreadores"
-  },
-  "settings_adblocker_list_3": {
-    "message": "Anuncios + Rastreadores + Molestias"
-  },
-  "settings_adblocker_lists": {
-    "message": "Cargar las siguientes listas del filtro de bloqueo de anuncios:"
   },
   "settings_allow_abtests": {
     "message": "Participar en Pruebas A/B"
