--- a/extension-manifest-v2/_locales/fr/messages.json
+++ b/extension-manifest-v2/_locales/fr/messages.json
@@ -635,7 +635,7 @@
     "message": "Confirmer le mot de passe :"
   },
   "consent_management": {
-    "message": "Consent Management",
+    "message": "Gestion du consentement",
     "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
   },
   "continue": {
@@ -1324,21 +1324,6 @@
   },
   "settings_account_name": {
     "message": "Nom"
-  },
-  "settings_adblocker": {
-    "message": "Listes de blocage des publicités"
-  },
-  "settings_adblocker_list_1": {
-    "message": "Publicités seulement"
-  },
-  "settings_adblocker_list_2": {
-    "message": "Publicités + traqueurs"
-  },
-  "settings_adblocker_list_3": {
-    "message": "Publicités + traqueurs + éléments nuisibles"
-  },
-  "settings_adblocker_lists": {
-    "message": "Charger les listes de filtres de blocage des publicités suivantes :"
   },
   "settings_allow_abtests": {
     "message": "Participation aux tests A/B"
