--- a/extension-manifest-v2/_locales/hu/messages.json
+++ b/extension-manifest-v2/_locales/hu/messages.json
@@ -635,7 +635,7 @@
     "message": "Jelszó megerősítése:"
   },
   "consent_management": {
-    "message": "Consent Management",
+    "message": "Hozzájárulás-kezelés",
     "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
   },
   "continue": {
@@ -1324,21 +1324,6 @@
   },
   "settings_account_name": {
     "message": "Név"
-  },
-  "settings_adblocker": {
-    "message": "Hirdetésblokkolási listák"
-  },
-  "settings_adblocker_list_1": {
-    "message": "Csak hirdetések"
-  },
-  "settings_adblocker_list_2": {
-    "message": "Hirdetések + nyomkövetők"
-  },
-  "settings_adblocker_list_3": {
-    "message": "Hirdetések + nyomkövetők + bosszantó dolgok"
-  },
-  "settings_adblocker_lists": {
-    "message": "Az alábbi hirdetésblokkolási listák betöltése:"
   },
   "settings_allow_abtests": {
     "message": "Részvétel A/B-tesztekben"
