--- a/extension-manifest-v2/_locales/ru/messages.json
+++ b/extension-manifest-v2/_locales/ru/messages.json
@@ -635,7 +635,7 @@
     "message": "Подтвердите пароль:"
   },
   "consent_management": {
-    "message": "Consent Management",
+    "message": "Управление согласием",
     "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
   },
   "continue": {
@@ -1324,21 +1324,6 @@
   },
   "settings_account_name": {
     "message": "Имя"
-  },
-  "settings_adblocker": {
-    "message": "Списки блокировки рекламы"
-  },
-  "settings_adblocker_list_1": {
-    "message": "Только реклама"
-  },
-  "settings_adblocker_list_2": {
-    "message": "Реклама + трекеры"
-  },
-  "settings_adblocker_list_3": {
-    "message": "Реклама + трекеры + раздражающие факторы"
-  },
-  "settings_adblocker_lists": {
-    "message": "Загрузите следующие списки фильтров блокировки рекламы:"
   },
   "settings_allow_abtests": {
     "message": "Участие в тестировании А/B"
