Fix ad-blocking button label

--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -6,8 +6,8 @@
   "accept_terms": {
     "message": "Accept terms"
   },
-  "ad_blocker": {
-    "message": "Ad-blocker"
+  "ad_blocking": {
+    "message": "Ad-blocking"
   },
   "additional_permissions_required": {
     "message": "Additional Permissions Required"
