Fix buttons labels

--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -7,7 +7,7 @@
     "message": "Accept terms"
   },
   "ad_blocking": {
-    "message": "Ad-blocking"
+    "message": "Ad-Blocking"
   },
   "additional_permissions_required": {
     "message": "Additional Permissions Required"
@@ -30,7 +30,7 @@
     "message": "All set! go with ghosty!"
   },
   "anti_tracking": {
-    "message": "Anti-tracking"
+    "message": "Anti-Tracking"
   },
   "any_questions__anytime_": {
     "message": "Any questions? Anytime!"
