--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -105,7 +105,7 @@
     "message": "Enable Ghostery to get started"
   },
   "enable_never_consent_": {
-    "message": "Enable Never-consent?"
+    "message": "Enable Never-Consent?"
   },
   "essential": {
     "message": "Essential",
