--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -166,7 +166,7 @@
     "message": "More information on $${0}."
   },
   "never_consent": {
-    "message": "Never-consent"
+    "message": "Never-Consent"
   },
   "never_consent_is_disabled": {
     "message": "Never-Consent is Disabled"
